# kato-rs-v2

./: Cargo.toml  Makefile  QWEN.md  README.md
kafka-lib/: Cargo.toml  QWEN.md  readme.md
kafka-lib/certs/: audit2_kafka.cer  audit2_kafka.pkcs8  client.cer  client.pkcs8  kafka.jks
kafka-lib/docs/: arch.puml  index.md
kafka-lib/src/: lib.rs
kafka-lib/src/kops/: broker.rs  config.rs  mod.rs  versions.rs
kato-rs/: Cargo.toml  QWEN.md
kato-rs/src/: main.rs
kato-rs/src/config/: mod.rs
kato-rs/src/gui/: mod.rs  stab.rs
