[package]
name = "kafka-lib"
version = "0.0.1"
authors = ["Анатолий Семенцов <avsementsov.sbt@sberbank.ru>"]
description = "Tiny async rust native kafka driver"
keywords = ["kafka", "async", "driver", "tiny"]
edition = "2021"

[dependencies]
string = "0.3.0"
bytes = "1.3.0"
tokio = { version = "1.22.0", features = ["full"]}
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.1"
kafka-protocol = "0.3.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
byteorder = "1.4.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"