[package]
name = "kafka-lib"
version = "0.0.1"
authors = ["Анатолий Семенцов <avsementsov.sbt@sberbank.ru>"]
description = "Tiny async rust native kafka driver"
keywords = ["kafka", "async", "driver", "tiny"]
edition = "2024"

[dependencies]
string = "0.3"
bytes = "1"
tokio = { version = "1", features = ["full"]}
tokio-rustls = { version = "0.26", features = [] }
rustls-pemfile = "2"
kafka-protocol = "0.16"
anyhow = "1"
thiserror = "2"
byteorder = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"