[package]
name = "kato-rs"
version = "0.0.1"
authors = ["Анатолий Семенцов <avsementsov.sbt@sberbank.ru>"]
description = "Kafka tool rust edition"
keywords = ["kafka", "tool"]
edition = "2021"

[dependencies]
kafka-lib = { path = "../kafka-lib" }
tokio = { version = "1.22.0", features = ["full"]}
anyhow = "1.0.66"
thiserror = "1.0.37"
byteorder = "1.4.3"
tracing = "0.1.37"
tracing-subscriber ={ version = "0.3", features = ["env-filter"]}
tracing-appender = "*"

sled = { version = "0", features = ["compression"] }
dirs = "4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
bson = "2"

# GUI
fltk = { version = "1", features = ["fltk-bundled"] }

[build-dependencies]
fl2rust = "0.5.6"